<resources>
    <string name="app_name">顺联动力</string>
    <string name="common_yuan">¥</string>
    <string name="common_yuans">元</string>
    <string name="common_wan">万</string>
    <string name="common_go_shop">去逛逛</string>
    <string name="common_chakanxiangqing">查看详情</string>
    <string name="common_wangluozhuangkuang">网络状况待提升</string>
    <string name="common_dianjichongshi">点击重试</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="time_yesterday">昨天</string>
    <string name="sys_message">系统消息</string>
    <string name="store_message">小店消息</string>
    <string name="sys_notice">系统通知</string>
    <string name="topic">头条</string>
    <string name="custom_message">客服消息</string>
    <string name="platform_message">平台消息</string>
    <string name="chat_lingquyouhui">领取优惠券</string>
    <string name="chat_lijilingqu">立即领取</string>
    <string name="please_service_comment">本次服务已结束，可以对我评价哦~</string>
    <string name="very_unsatisfy">非常不满意</string>
    <string name="unsatisfy">不满意</string>
    <string name="commonly">一般</string>
    <string name="satisfy">满意</string>
    <string name="very_satisfy">非常满意</string>
    <string name="already_comm">已评价</string>
    <string name="seller">商家</string>
    <string name="seller_id">商家ID</string>
    <string name="express_number">快递单号</string>
    <string name="select_goods">选择商品</string>
    <string name="submit">提交</string>
    <string name="submitted">已提交</string>
    <string name="send_order">发送订单</string>
    <string name="order_select">选择订单</string>
    <string name="to_shop">进店</string>
    <string name="help_center">帮助中心</string>
    <string name="please_check_order">亲，请你核对订单信息</string>
    <string name="receiver">收货人：%s</string>
    <string name="phone_num">电话：%s</string>
    <string name="address_detail">地址：%s</string>
    <string name="no_switch">暂不切换</string>
    <string name="ready_to_switch">确定切换</string>
    <string name="switch_status">您当前的身份是%s，无法与%s聊天，请先切换为%s，是否要切换?</string>
    <string name="customer_list">客户列表</string>
    <string name="choose_customer_list">选择客户列表</string>
    <string name="switch_other">转接</string>
    <string name="next_step">下一步</string>
    <string name="search_customer">搜索客服</string>
    <string name="little_store_vip_notice">小店会员通知</string>
    <string name="order_notice">订单通知</string>
    <string name="order_msg">订单消息</string>
    <string name="vip_msg">会员消息</string>
    <string name="found_msg">发现消息</string>
    <string name="main_page">首页</string>
    <string name="sort">分类</string>
    <string name="main_wodedian">我的店</string>
    <string name="main_shengjiplus">升级PLUS</string>
    <string name="discover_center">发现</string>
    <string name="shopping_car">购物车</string>
    <string name="person_center">个人中心</string>
    <string name="common_zhifubaohint">您还没有安装支付宝，请先安装~</string>
    <string name="common_weixinhint">您还没有安装微信，请先安装~</string>
    <string name="common_gongxinin">恭喜您获得%s积分！</string>
    <string name="RegisterOneAct_qsrtjrid">请输入推荐人ID</string>
    <string name="RegisterOneAct_qsrsjh">请输入手机号</string>
    <string name="RegisterOneAct_qsryzm">请输入验证码</string>
    <string name="RegisterOneAct_sjxztjr">随机选择推荐人</string>
    <string name="RegisterOneAct_tjridbnwk">推荐人id不能为空</string>
    <string name="RegisterOneAct_hqyzmsb">获取验证码失败</string>
    <string name="RegisterOneAct_sjyzmfssb">手机验证码发送失败</string>
    <string name="RegisterOneAct_sjhbnwk">手机号不能为空</string>
    <string name="RegisterOneAct_sjhbzq">手机号不正确</string>
    <string name="RegisterTwoAct_yzmyfsd">验证码已发送到</string>
    <string name="RegisterTwoAct_qsrxmm">请输入新密码</string>
    <string name="RegisterTwoAct_qcxsrxmm">请重新输入新密码</string>
    <string name="RegisterTwoAct_qsrndnc">请输入您的昵称</string>
    <string name="RegisterTwoAct_finish">完成</string>
    <string name="RegisterTwoAct_shyzmcw">手机验证码错误</string>
    <string name="RegisterTwoAct_mmzh">密码至少8位，由字母,数字和字符任意两种以上组合</string>
    <string name="RegisterTwoAct_mmbyz">两次输入的密码不一致</string>
    <string name="RegisterTwoAct_ncszgc">昵称设置过长</string>
    <string name="RegisterTwoAct_qsznc">请设置昵称</string>
    <string name="RegisterTwoAct_sjyzm">请输入手机验证码</string>
    <string name="RegisterTwoAct_mmbnwk">密码不能为空</string>
    <string name="SelectRecommendAct_hyp">换一批</string>
    <string name="SelectRecommendAct_sztjr">选择推荐人</string>
    <string name="SelectRecommendAct_sure">确定</string>
    <string name="SelectRecommendAct_bind">绑定</string>
    <string name="LoginPswFrg_qsrsjh">请输入手机号/用户ID</string>
    <string name="LoginPswFrg_inputphone">请输入手机号</string>
    <string name="LoginPswFrg_qsrmm">请输入密码</string>
    <string name="LoginPswFrg_qsryzm">请输入验证码</string>
    <string name="LoginPswFrg_wxdl">微信登录</string>
    <string name="LoginPswFrg_codeLogin">验证码登录</string>
    <string name="LoginPswFrg_AccountNumber">账号登录</string>
    <string name="LoginPswFrg_cxhq">重新获取</string>
    <string name="help">帮助</string>
    <string name="register">注册</string>
    <string name="errcode_cancel">取消</string>
    <string name="errcode_deny">被拒绝</string>
    <string name="errcode_unknown">网络异常，请稍后再试！</string>
    <string name="LoginPswFrg_dl">登录</string>
    <string name="plase_login">请先登录</string>
    <string name="plase_again_login">请重新登录</string>
    <string name="FindPsw_zhmm">找回密码</string>
    <string name="coupon_youxiaoqi">有效期：</string>
    <string name="coupon_lingquanzhongxin">领券中心</string>
    <string name="coupon_pintaiyouhui">平台优惠券</string>
    <string name="coupon_shangjia">商家优惠券</string>
    <string name="coupon_lijishiyong">立即使用</string>
    <string name="coupon_keyongquan">可用券</string>
    <string name="coupon_sousuoyouhuiquan">搜索优惠券</string>
    <string name="coupon_shunliandongli">顺联动力优惠券</string>
    <string name="store_search">搜索店铺内商品</string>
    <string name="store_sort">分类</string>
    <string name="store_first">店铺首页</string>
    <string name="store_baby">店铺宝贝</string>
    <string name="store_babys">全部商品</string>
    <string name="store_discount">促销</string>
    <string name="store_new">新品</string>
    <string name="store_zonghe">综合</string>
    <string name="store_xiaoliang">销量</string>
    <string name="store_shangxin">上新</string>
    <string name="store_jiage">价格</string>
    <string name="store_xinping">新品</string>
    <string name="store_baokuan">爆款</string>
    <string name="store_remai">热卖</string>
    <string name="store_diaozha">吊炸</string>
    <string name="store_baobeifenlei">商品分类</string>
    <string name="store_dianpujianjie">店铺简介</string>
    <string name="store_dianpufenlei">店铺分类</string>
    <string name="store_kefu">客服</string>
    <string name="store_haopinglv">商品好评率</string>
    <string name="store_pingjia">商品评价</string>
    <string name="store_fuwutaidu">服务态度</string>
    <string name="store_wuliufuwu">物流服务</string>
    <string name="store_lianximaijia">联系卖家</string>
    <string name="store_fuwudianhua">服务电话</string>
    <string name="store_fuwuweixin">服务微信</string>
    <string name="store_dianpuerweima">店铺二维码</string>
    <string name="store_baozhengjin">保证金</string>
    <string name="store_kaidianshijian">开店时间</string>
    <string name="store_yingyezhizhao">营业执照</string>
    <string name="store_quanbu">全部</string>
    <string name="store_chakanquanbu">查看全部</string>
    <string name="store_taocanjia">套餐价</string>
    <string name="store_zengpin">赠品</string>
    <string name="store_kanzhizhao">*输入验证码查看执照信息</string>
    <string name="store_taocan">套餐原价￥</string>
    <string name="store_sales_count">已售:%s</string>
    <string name="phone_chongzhijilu">充值记录</string>
    <string name="phone_zanwuchongzhi">暂无充值记录~</string>
    <string name="phone_lijichongzhi">立即充值</string>
    <string name="pay_chakandingdan">查看订单</string>
    <string name="pay_dianpushouye">返回首页</string>
    <string name="pay_nikeneng">你可能还想买</string>
    <string name="pay_plusdianzhu">PLUS店主都在买</string>
    <string name="rmb">￥</string>
    <string name="new_goods">新品</string>
    <string name="explosion_goods">爆款</string>
    <string name="hot_goods">热卖</string>
    <string name="recommend_goods">推荐</string>
    <string name="coupons">领券</string>
    <string name="package_details">套餐详情</string>
    <string name="look_package_details">套餐 查看套餐</string>
    <string name="product_parameter">商品参数</string>
    <string name="select_size_color">选择  尺码  颜色分类</string>
    <string name="_7_days_no_reason_to_return">7天无理由退货</string>
    <string name="genuine_guarantee">正品保障</string>
    <string name="_24_hours_delivery">24小时发货</string>
    <string name="quality_goods">品质</string>
    <string name="collection">收藏</string>
    <string name="already_collected">已收藏</string>
    <string name="goods_count">商品数</string>
    <string name="attention_count">收藏数</string>
    <string name="follow_count">关注数</string>
    <string name="description">描述相符</string>
    <string name="quality_satisfy">质量满意</string>
    <string name="this_store_sells_well">本店热销</string>
    <string name="the_shopkeeper_recommended">店主推荐</string>
    <string name="continue_dragging_to_view_text_details">继续拖动，查看图文详情</string>
    <string name="free_shipping">包邮</string>
    <string name="not_mail">邮费:%s元</string>
    <string name="sold">已售%s件</string>
    <string name="pull">满</string>
    <string name="reduce">减</string>
    <string name="goods_stock">库存%s件</string>
    <string name="count">数量</string>
    <string name="goods_pleaseselectparam">请选择规格</string>
    <string name="combo_price">套餐价</string>
    <string name="combo_original_price">套餐原价￥%s</string>
    <string name="select_combo">选择套餐</string>
    <string name="goods_attribute">商品参数</string>
    <string name="select_voucher">领取店铺优惠券</string>
    <string name="voucher_full_use">满%s使用</string>
    <string name="valid_date">有效期：%1$s-%2$s</string>
    <string name="no_doorsill_voucher">无门槛优惠券</string>
    <string name="receive">领取</string>
    <string name="hava_received">已领取</string>
    <string name="shop">店铺</string>
    <string name="shopping_cart">购物车</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="now_buy">立刻购买</string>
    <string name="i_also_want_to">我还想要</string>
    <string name="goods">商品</string>
    <string name="comment">评价</string>
    <string name="detail">详情</string>
    <string name="wechat">微信</string>
    <string name="pic_text_share">图文分享</string>
    <string name="copy_link">复制链接</string>
    <string name="search">搜索</string>
    <string name="hot_search">热搜</string>
    <string name="search_goods">搜索商品</string>
    <string name="clear_history">清空历史记录</string>
    <string name="message">消息</string>
    <string name="my_footprint">我的足迹</string>
    <string name="my_collection">我的收藏</string>
    <string name="select_goods_Specifications">请选择商品规格</string>
    <string name="full_yuan_available">满%s元可用</string>
    <string name="good_comment">评价(%s)</string>
    <string name="location">定位</string>
    <string name="input_hint_name">请输入收货人姓名</string>
    <string name="input_hint_phone_number">请输入手机号码</string>
    <string name="input_hint_click_select">点击选择</string>
    <string name="input_hint_detail_address">请输入详细地址（5-120字）</string>
    <string name="address_shouhuoren">收货人</string>
    <string name="address_shoujihao">手机号码</string>
    <string name="address_shenshiqu">省市区</string>
    <string name="address_xiangxidizhi">详细地址</string>
    <string name="already_comment">已追评</string>
    <string name="balance_woyiyuedu">我已阅读并同意此</string>
    <string name="balance_yonghuxieyi">《用户协议》</string>
    <string name="balance_zhengshixinming">真实姓名</string>
    <string name="balance_benrenshouji">本人手机号</string>
    <string name="balance_qingshurushengfengzheng">请输入身份证上的名字</string>
    <string name="balance_qingshuruzhifubao">请输入支付宝账号</string>
    <string name="balance_zhifubaozhanghao">支付宝账号</string>
    <string name="balance_huoquyanzhengma">获取验证码</string>
    <string name="balance_duanxingyanzheng">短信验证码</string>
    <string name="balance_tianjiazhifu">添加支付宝账号</string>
</resources>