<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ash"
    android:orientation="vertical">

    <include layout="@layout/title_common_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:showDividers="middle"
        android:paddingRight="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="18.5dp"
            android:paddingTop="18.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/address_shouhuoren"
                android:textColor="@color/new_text"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:background="@null"
                android:hint="@string/input_hint_name"
                android:textColor="@color/new_text"
                android:textColorHint="@color/my_gray_one"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="18.5dp"
            android:paddingTop="18.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/address_shoujihao"
                android:textColor="@color/new_text"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:background="@null"
                android:hint="@string/input_hint_phone_number"
                android:textColor="@color/new_text"
                android:textColorHint="@color/my_gray_one"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="18.5dp"
            android:paddingTop="18.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/address_shenshiqu"
                android:textColor="@color/new_text"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tv_location"
                android:background="@null"
                android:hint="@string/input_hint_click_select"
                android:textColor="@color/new_text"
                android:textColorHint="@color/my_gray_one"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableLeft="@mipmap/icon_address_position"
                android:drawablePadding="5dp"
                android:text="@string/location"
                android:textColor="@color/pink_color"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="18.5dp"
            android:paddingTop="18.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/address_xiangxidizhi"
                android:textColor="@color/new_text"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:background="@null"
                android:hint="@string/input_hint_detail_address"
                android:textColor="@color/new_text"
                android:textColorHint="@color/my_gray_one"
                android:textSize="14sp" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
