<?xml version="1.0" encoding="utf-8"?>
<com.shunlian.app.widget.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/value_F7F7F7"
    android:orientation="vertical">

    <com.shunlian.app.widget.MyRelativeLayout
        android:id="@+id/mrlayout_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <com.shunlian.app.widget.MyImageView
            android:id="@+id/miv_close"
            android:layout_width="9dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_common_back_black" />

        <com.shunlian.app.widget.MyTextView
            android:id="@+id/mtv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/balance_tianjiazhifu"
            android:textColor="@color/my_dark_grey"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_gray_two" />
    </com.shunlian.app.widget.MyRelativeLayout>

    <com.shunlian.app.widget.MyRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <com.shunlian.app.widget.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/balance_zhengshixinming"
            android:textColor="@color/new_text"
            android:textSize="16sp" />

        <EditText
            android:textCursorDrawable="@drawable/edit_cursor"
            android:id="@+id/et_shengfengzheng"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="115dp"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/balance_qingshurushengfengzheng"
            android:singleLine="true"
            android:textColor="@color/new_text"
            android:textColorHint="@color/color_value_6c"
            android:textSize="16sp" />
    </com.shunlian.app.widget.MyRelativeLayout>

    <com.shunlian.app.widget.MyRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_marginTop="0.5dp">

        <com.shunlian.app.widget.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/balance_zhifubaozhanghao"
            android:textColor="@color/new_text"
            android:textSize="16sp" />

        <EditText
            android:textCursorDrawable="@drawable/edit_cursor"
            android:id="@+id/et_zhifubao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="115dp"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/balance_qingshuruzhifubao"
            android:singleLine="true"
            android:textColor="@color/new_text"
            android:textColorHint="@color/color_value_6c"
            android:textSize="16sp" />
    </com.shunlian.app.widget.MyRelativeLayout>

    <com.shunlian.app.widget.MyRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_marginTop="0.5dp">

        <com.shunlian.app.widget.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/balance_benrenshouji"
            android:textColor="@color/new_text"
            android:textSize="16sp" />

        <com.shunlian.app.widget.MyTextView
            android:id="@+id/mtv_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="115dp"
            android:gravity="center_vertical"
            android:textColor="@color/new_text"
            android:textSize="16sp" />
    </com.shunlian.app.widget.MyRelativeLayout>

    <com.shunlian.app.widget.MyRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:background="@color/white"
        android:layout_marginTop="0.5dp">

        <com.shunlian.app.widget.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/balance_duanxingyanzheng"
            android:textColor="@color/new_text"
            android:textSize="16sp" />

        <EditText
            android:textCursorDrawable="@drawable/edit_cursor"
            android:id="@+id/et_yanzhengma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="115dp"
            android:layout_marginRight="100dp"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/RegisterOneAct_qsryzm"
            android:singleLine="true"
            android:textColor="@color/new_text"
            android:textColorHint="@color/color_value_6c"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="94dp"
            android:background="@color/light_gray_three"/>

        <com.shunlian.app.widget.MyTextView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/mtv_timer"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:text="@string/balance_huoquyanzhengma"
            android:gravity="center"
            android:textColor="@color/new_text"
            android:textSize="14sp" />
    </com.shunlian.app.widget.MyRelativeLayout>
    <com.shunlian.app.widget.MyLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.shunlian.app.widget.MyImageView
            android:id="@+id/miv_xieyi"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:src="@mipmap/img_balance_xieyi_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.shunlian.app.widget.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/balance_woyiyuedu"
            android:textColor="@color/my_gray_one" />
        <com.shunlian.app.widget.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mtv_xieyi"
            android:text="@string/balance_yonghuxieyi"
            android:textSize="12sp"
            android:textColor="@color/pink_color" />
    </com.shunlian.app.widget.MyLinearLayout>
    <com.shunlian.app.widget.MyTextView
        android:id="@+id/mtv_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner_solid_da_50px"
        android:gravity="center"
        android:text="@string/RegisterTwoAct_finish"
        android:textColor="@color/white"
        android:textSize="15sp" />
</com.shunlian.app.widget.MyLinearLayout>
